--- a/style.css
+++ b/style.css
@@ -1,8 +1,33 @@
 /* Fonts
 font-family: 'Roboto Mono', monospace;
 font-family: 'Rubik', sans-serif; */
+* {
+    box-sizing: border-box;
+    letter-spacing: 0.01rem;
+    scroll-behavior: smooth;
+}
+
 body {
     margin: 0;
+    border: 0;
+    padding: 0;
+    font-size: 100%;
+    font-weight: inherit;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url(imgs/bg-grid.jpg);
+}
+
+.if {
+    width: 85%;
+    height: 95%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+    border: 1px solid #413C4A;
 }
 
 .topbar {
@@ -15,7 +40,7 @@ body {
     text-align: center;
   }
   .nav--hide {
-    transform: translateX(-150%);
+    transform: translateX(-1000%);
   }
 
 .header {
@@ -24,7 +49,7 @@ body {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    padding: 16px;
+    padding: 16px; 
   }
   
 @media all and (min-width: 800px) {
@@ -34,6 +59,12 @@ body {
     }
   }
 
+.center-content {
+    width: 100%;
+    align-items: center;
+}
+
+  /* HOME */
 .home-section {
     padding-top: 80px;
     padding-bottom: 80px;
@@ -63,6 +94,7 @@ body {
 }
 .section-p{
     font-family: Roboto Mono, monospace;
+    font-weight: 200;
 }
 summary {
     display: block;
@@ -83,9 +115,12 @@ details[open] summary::after {
 
 /*CONTACT*/
 .contact-section {
+    width: 100%;
     background-color: white;
   }
-
+.contact-section p {
+    text-align: center;
+}
 form {
     max-width:420px;
     margin:50px auto;
