added fonts em, centered anim, margin body

--- a/style.css
+++ b/style.css
@@ -7,30 +7,56 @@ font-family: 'Rubik', sans-serif; */
 }
 
 body {
-    margin: 0;
+    margin: 100px 50px;
     border: 0;
     padding: 0;
-    font-size: 100%;
-    font-family: 'Roboto Mono', monospace;
-    font-weight: inherit;
+    font-size: 1em;
+    font-family: 'Roboto Mono', 'monospace';
+    font-weight: 300;
     display: flex;
     justify-content: center;
     align-items: center;
     background-image: url(imgs/bg-grid.jpg);
 }
+  h1, h2, h3 {
+    font-family: 'Rubik', 'sans-serif';
+    margin: 0;
+  }
+
+  h1 {
+    font-size: 5em;
+    line-height: 70px;
+  }
+
+  h2 {
+    font-size: 3em;
+    line-height: 70px;
+  }
+
+  h3 {
+    font-size: 2em;
+  }
+
+  p {
+    padding: 0 0 10px 0;
+  }
+
+  .bold {
+    font-style: bolder;
+  }
 
 .if {
-    width: 85%;
+    width: 80%;
     max-width: 1000px;
     min-width: 289px;
-    height: 95%;
+    height: 90%;
     position: relative;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: space-between;
     background-color: white;
-    border: 1px solid #413C4A;
+    border: 4px solid #413C4A;
 }
 
 .topbar {
@@ -39,14 +65,18 @@ body {
     display: flex;
     padding: 8px 12px;
     justify-content: space-between;
-    background-color: lightblue; 
+    background-color: #B4A1DB; 
   }
     .navbar {
       flex: 1;
-      background-color: red;
       text-align: center;
   }
 
+  .btn-menu {
+    width: 30px;
+    height: 30px;
+    content: url(imgs/menuCerrado-img.svg);
+  }
 .header {
     width: 100%;
     height: 100vh;
@@ -59,10 +89,24 @@ body {
     flex-direction: column;
     padding: 16px; 
   }
+.arrow-container{
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  max-width: 30%;
+  margin: 1% 0em 1% auto;
+  text-align: right;
+}
+  .arrow-txt {
+    position: relative;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    display: flex;
 
-    .arrow-txt {
-  
-    /*ANIMATION*/
+  /*ANIMATION*/
       animation: rotation 10s infinite linear;
     }
       @keyframes rotation {
@@ -73,8 +117,14 @@ body {
         to {
         transform: rotate(365deg);
         }
-      }
-      
+  }
+  .arrow-img {
+    position: absolute;
+    width: 120px;
+    height: 120px;
+    background-size: cover;
+    border-radius: 50%;
+  }
   
 @media all and (min-width: 800px) {
     .center-content {
@@ -86,17 +136,29 @@ body {
 .center-content {
     width: 100%;
     align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;  
 }
 
+.bigTitle {
+  margin: 0;
+  font-family: 'Rubik', sans-serif;
+  line-height: 100%;
+  font-size: 4em;
+  font-weight: 800;
+  text-transform: uppercase;
+}
   /* ABOUT ME */
 .aboutMe-section {
-    padding-top: 80px;
-    padding-bottom: 80px;
+    padding: 80px;
+    align-items: center;
   }
   /*Portrait photo*/
   .portrait-container {
     flex-basis: 90%;
     max-width: 400px;
+    margin: 20px;
     margin-top: 1rem;
     position: relative;
     z-index: 10;
@@ -109,12 +171,15 @@ body {
     .portrait {
       width: 100%;
       height: 100%;
-      display: inline-block;
-      object-fit: contain;
   }
 
   /* BUTTONS */
   /*Main Button*/
+.button-container {
+  display: flex;
+  gap: 20px;
+  align-content: space-between;
+}
 .btn {
   cursor: pointer;
   display: inline-block;
@@ -126,7 +191,7 @@ body {
   background-color: #E2D5FC;
   color: black;
   border: 1px solid #413C4A;
-  border-radius: 10px;
+  /* border-radius: 10px; */
   box-shadow: 2px 2px 0px black;
   
   font-weight: 600;
@@ -201,6 +266,7 @@ body {
 /*CONTACT*/
 .contact-section {
     width: 100%;
+    padding: 40px;
   }
 .contact-section p {
     text-align: center;
@@ -215,7 +281,7 @@ form {
 .contact-form {
         color: black;
         font-size: 15px;
-        border-radius: 10px;
+        /* border-radius: 10px;*/
         box-shadow: 2px 2px 0px black;
         line-height: 22px;
         background-color: transparent;
@@ -244,7 +310,7 @@ textarea {
     font-size: 20px;
     width: 100%;
     background: #E2D5FC;
-    border-radius:10px;
+    /* border-radius:10px; */
     border: 1px solid black;
     box-shadow: 2px 2px 0px black;
     cursor: pointer;
@@ -257,6 +323,9 @@ textarea {
 
 [type="submit"]:hover { background:#B4A1DB;}
 
+.findMe-section {
+  margin: 10px;
+}
 .rrss-icons {
   display: flex;
   width: fit-content;
