--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@ body {
     justify-content: center;
     align-items: center;
     background-image: url(imgs/bg-grid.jpg);
+    background-blend-mode: multiply;
+    background-color: #E9E5EA;
 }
   h1, h2, h3 {
     font-family: 'Rubik', 'sans-serif';
@@ -60,8 +62,8 @@ body {
 }
 
 .topbar {
-  width: 100%;
-  height: 100%;
+    width: 100%;
+    height: 100%;
     display: flex;
     padding: 8px 12px;
     justify-content: space-between;
@@ -71,12 +73,41 @@ body {
       flex: 1;
       text-align: center;
   }
+    .navtext {
+      display: inline-block;
+      position: relative;
+      color: black;
+      text-decoration: none;
+      font-family: 'Rubik', 'sans-serif';
+      font-size: 1.2em;
+    }
+      .navtext:hover {
+        color:white;
+      }
+      .navtext::after {
+        content: '';
+        position: absolute;
+        width: 100%;
+        transform: scaleX(0);
+        height: 1px;
+        bottom: 0;
+        left: 0;
+        background-color: white;
+        transform-origin: bottom right;
+        transition: transform 0.25s ease-out;
+      }
+      
+      .navtext:hover::after {
+        transform: scaleX(1);
+        transform-origin: bottom left;
+      }
 
   .btn-menu {
     width: 30px;
     height: 30px;
     content: url(imgs/menuCerrado-img.svg);
   }
+
 .header {
     width: 100%;
     height: 100vh;
@@ -89,6 +120,7 @@ body {
     flex-direction: column;
     padding: 16px; 
   }
+  
 .arrow-container{
   box-sizing: border-box;
   display: flex;
@@ -231,20 +263,21 @@ body {
 }
   .section-title {
       width: 100%;
-      padding: 0.5rem 0;
+      padding: 0.3rem 0;
       border-top: 1px solid white;
 
       font-family: Rubik, sans-serif;
       font-size: 30px;
+      font-weight: 700;
   }
 
   .section-p-title {
-      font-family: Rubik, sans-serif;
+      font-family: 'Roboto Mono', 'monospace';
       font-size: 20px;
-     font-weight: 400;
+     font-weight: 700;
   }
   .section-p{
-      font-weight: 200;
+      font-weight: lighter;
   }
   summary {
       display: block;
