--- a/style.css
+++ b/style.css
@@ -3,14 +3,13 @@ font-family: 'Roboto Mono', monospace;
 font-family: 'Rubik', sans-serif; */
 * {
     box-sizing: border-box;
-    scroll-behavior: smooth;
 }
 
 body {
-    margin: 100px 50px;
+    margin: 20px 50px;
     border: 0;
     padding: 0;
-    font-size: 1em;
+    font-size: 100%;
     font-family: 'Roboto Mono', 'monospace';
     font-weight: 300;
     display: flex;
@@ -26,139 +25,121 @@ body {
   }
 
   h1 {
-    font-size: 5em;
-    line-height: 70px;
+    font-size: 4em;
+    line-height: 90%;
   }
 
   h2 {
     font-size: 3em;
-    line-height: 70px;
   }
 
   h3 {
-    font-size: 2em;
+    margin: 1px;
+    font-size: 1.5em;
   }
 
   p {
-    padding: 0 0 10px 0;
+    margin: 12px;
   }
-
+ /* UTILITIES ABAJO */
   .bold {
     font-style: bolder;
   }
 
 .if {
-    width: 80%;
-    max-width: 1000px;
-    min-width: 280px;
-    height: 90%;
-    position: relative;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: space-between;
-    background-color: white;
-    border: 4px solid #413C4A;
-}
-
-.topbar {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    padding: 8px 12px;
-    justify-content: space-between;
-    background-color: #B4A1DB; 
-  }
-    .navbar {
-      flex: 1;
-      text-align: center;
-  }
-  .btn-menu {
-    background-color: red;
-	  width: 40px;
-	  height: 40px;
-  }
-
-    .navtext {
-      display: inline-block;
-      position: relative;
-      color: black;
-      text-decoration: none;
-      font-family: 'Rubik', 'sans-serif';
-      font-size: 1.2em;
-    }
-      .navtext:hover {
-        color:white;
-      }
-      .navtext::after {
-        content: '';
-        position: absolute;
-        width: 100%;
-        transform: scaleX(0);
-        height: 1px;
-        bottom: 0;
-        left: 0;
-        background-color: white;
-        transform-origin: bottom right;
-        transition: transform 0.25s ease-out;
-      }
-      
-      .navtext:hover::after {
-        transform: scaleX(1);
-        transform-origin: bottom left;
-      }
+  width: 85%;
+  max-width: 1000px;
+  min-width: 280px;
+  height: 95%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  background-color: white;
+  border: 4px solid black;
+  box-shadow: 2px 2px 0px black;
+} 
+ 
   
 
 .header {
+    position: relative;
     width: 100%;
-    height: 100vh;
-    background-color: #e3d5fd;
+    height: 95vh;
+    background: #E2D5FC;
     font-family: 'Rubik', sans-serif;
     font-weight: 700;
     text-align: left;
     display: flex;
     justify-content: center;
     flex-direction: column;
-    padding: 16px; 
+    padding: 16px;
+    border-bottom: 4px solid black;
   }
 
-.arrow-container{
-  box-sizing: border-box;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
-  max-width: 30%;
-  margin: 1% 0em 1% auto;
-  text-align: right;
-}
-  .arrow-txt {
-    position: relative;
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    display: flex;
-
-  /*ANIMATION*/
-      animation: rotation 10s infinite linear;
-    }
-      @keyframes rotation {
-        from {
-        transform: rotate(0deg);
-        }
-      
-        to {
-        transform: rotate(365deg);
-        }
+  .header span {
+    font-weight: 800;
+    text-transform: uppercase;
+    letter-spacing: -1px;
   }
-  .arrow-img {
-    position: absolute;
-    width: 120px;
-    height: 120px;
-    background-size: cover;
-    border-radius: 50%;
+  .header h1 {
+    margin-top: 10px;
+    letter-spacing: 20px;
+    text-transform: uppercase;
+    text-align: center;
+  }
+  .header h2 {
+    text-transform: uppercase;
+    letter-spacing: -1px;
+  }
+  .header h3 {
+    text-transform: uppercase;
+    text-align: right;
+    margin-top: 100px;
   }
   
+  .arrow-container {
+    position: absolute;
+    bottom: 5%;
+    right: 5%;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: flex-end;
+    margin: 1% 0em 1% auto;
+    text-align: right;
+  }
+    .arrow-txt {
+      position: relative;
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      display: flex;
+
+      /*ANIMATION*/
+        animation: rotation 10s infinite linear;
+      }
+        @keyframes rotation {
+          from {
+          transform: rotate(0deg);
+          }
+        
+          to {
+          transform: rotate(365deg);
+          }
+    }
+    .arrow-img {
+      position: absolute;
+      width: 50px;
+      height: 50px;
+      background-size: cover;
+      border-radius: 50%;
+    }
+
+/* MEDIQUERIES */
+
 @media all and (min-width: 800px) {
     .center-content {
       padding-left: calc((100% - 800px) / 2);
@@ -166,8 +147,10 @@ body {
     }
   }
 
+  /* FOR ALL SECTIONS */
 .center-content {
     width: 100%;
+    padding: 20px;
     align-items: center;
     display: flex;
     flex-direction: column;
@@ -183,10 +166,7 @@ body {
   text-transform: uppercase;
 }
   /* ABOUT ME */
-.aboutMe-section {
-    padding: 80px;
-    align-items: center;
-  }
+ 
   /*Portrait photo*/
   .portrait-container {
     flex-basis: 90%;
@@ -198,7 +178,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid #000;
+    border: 2px solid #000;
     box-shadow: 4px 4px 0px #000;
   }
     .portrait {
@@ -210,20 +190,20 @@ body {
   /*Main Button*/
 .button-container {
   display: flex;
-  gap: 20px;
+  gap: 10px;
   align-content: space-between;
 }
 .btn {
   cursor: pointer;
   display: inline-block;
   padding: 8px 10px;
-  line-height: 18px;
+  line-height: 15px;
   text-align: center;
   text-decoration: none;
   
   background-color: #E2D5FC;
   color: black;
-  border: 1px solid #413C4A;
+  border: 2px solid #413C4A;
   /* border-radius: 10px; */
   box-shadow: 2px 2px 0px black;
   
@@ -234,7 +214,7 @@ body {
   .btn:hover {
     color: #B4A1DB;
     background-color: white;
-   border: 1px solid #B4A1DB;
+   border: 2px solid #B4A1DB;
   }
 
   .btn:active {
@@ -249,7 +229,7 @@ body {
   .btn--secondary:hover {
     color: #413C4A;
     background-color: #fff;
-    border: 1px solid #413C4A;
+    border: 2px solid #413C4A;
   }
 
   .btn--secondary:active {
@@ -257,29 +237,29 @@ body {
   }
 /* SKILLS */
   /*Style*/
+.moreStuff {
+  margin-bottom: 30px;;
+}  
 .skills-section {
     background-color: #413C4A;
     color: white;
-    padding: 30px;
 }
   .section-title {
       width: 100%;
       padding: 0.3rem 0;
-      border-top: 1px solid white;
+      border-top: 2px solid white;
 
       font-family: Rubik, sans-serif;
-      font-size: 30px;
+      font-size: 1.5em;
       font-weight: 700;
   }
 
   .section-p-title {
-      font-family: 'Roboto Mono', 'monospace';
-      font-size: 20px;
-     font-weight: 700;
+    font-family: 'Roboto Mono', 'monospace';
+    font-size: 1em;
+    font-weight: 700;
   }
-  .section-p{
-      font-weight: lighter;
-  }
+  
   summary {
       display: block;
       color: white;
@@ -298,10 +278,6 @@ body {
     }
 
 /*CONTACT*/
-.contact-section {
-    width: 100%;
-    padding: 40px;
-  }
 .contact-section p {
     text-align: center;
     align-items: center;
@@ -309,7 +285,7 @@ body {
 }
 form {
     max-width:420px;
-    margin:50px auto;
+    margin: 40px 0px 0px 0px
     }
 
 .contact-form {
@@ -319,7 +295,7 @@ form {
         box-shadow: 2px 2px 0px black;
         line-height: 22px;
         background-color: transparent;
-        border:1px solid black;
+        border: 2px solid black;
         transition: all 0.3s;
         padding: 13px;
         margin-bottom: 15px;
@@ -345,7 +321,7 @@ textarea {
     width: 100%;
     background: #E2D5FC;
     /* border-radius:10px; */
-    border: 1px solid black;
+    border: 2px solid black;
     box-shadow: 2px 2px 0px black;
     cursor: pointer;
     color: black;        
@@ -357,9 +333,6 @@ textarea {
 
 [type="submit"]:hover { background:#B4A1DB;}
 
-.findMe-section {
-  margin: 10px;
-}
 .rrss-icons {
   display: flex;
   width: fit-content;
