--- a/style.css
+++ b/style.css
@@ -190,7 +190,8 @@ body {
   /*Main Button*/
 .button-container {
   display: flex;
-  gap: 10px;
+  flex: wrap;
+  gap: 20px;
   align-content: space-between;
 }
 .btn {
@@ -205,21 +206,26 @@ body {
   color: black;
   border: 2px solid #413C4A;
   /* border-radius: 10px; */
+  border-radius: 0.25rem;
   box-shadow: 2px 2px 0px black;
+  transition: all .14s ease-out;
   
   font-weight: 600;
   font-size: 18px;
 }
 
   .btn:hover {
-    color: #B4A1DB;
-    background-color: white;
-   border: 2px solid #B4A1DB;
+  color: #B4A1DB;
+  background-color: white;
+  border: 2px solid #B4A1DB;
+  transform: translate(-4px, -4px);
+  box-shadow: 6px 8px 0px black;
+  border-collapse: collapse;
   }
 
-  .btn:active {
+  /* .btn:active {
     transform: translate(2px, 2px);
-  }
+  } /*
 
 /*Secondary button*/
 .btn--secondary{
@@ -232,7 +238,7 @@ body {
     border: 2px solid #413C4A;
   }
 
-  .btn--secondary:active {
+  /* .btn--secondary:active {
     transform: translate(0px);
   }
 /* SKILLS */
@@ -331,10 +337,52 @@ textarea {
     margin-top: -4px;
 }
 
-[type="submit"]:hover { background:#B4A1DB;}
+[type="submit"]:hover {
+  /* background:#B4A1DB; */
+  
+    color: #B4A1DB;
+    background-color: white;
+    border: 2px solid #B4A1DB;
+    transform: translate(-4px, -4px);
+    box-shadow: 6px 8px 0px black;
+    border-collapse: collapse;
+  
+}
 
 .rrss-icons {
   display: flex;
   width: fit-content;
   gap: 40px;
+}
+
+/* MEDIA QUIERIES */
+
+@media all and (max-width: 500px) {
+
+  .button-container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+
+}
+@media all and (min-width: 500px) {
+
+  .header h1 {
+    text-align: left;
+  }
+
+}
+
+@media all and (min-width: 800px) {
+
+  .header h1 {
+    text-align: center;
+    margin-top: 40px;
+  }
+
+  .header h2 {
+    text-align: center;
+  }
+  
 }
