--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-/* Fonts
-font-family: 'Roboto Mono', monospace;
-font-family: 'Rubik', sans-serif; */
 * {
     box-sizing: border-box;
 }
@@ -41,10 +38,6 @@ body {
   p {
     margin: 12px;
   }
- /* UTILITIES ABAJO */
-  .bold {
-    font-style: bolder;
-  }
 
 .if {
   width: 85%;
@@ -61,8 +54,83 @@ body {
   box-shadow: 2px 2px 0px black;
 } 
  
-  
+/*NAVBAR PRUEBAS*/
+ /*Este codigo es una guarrada ¡ARREGLAR! */
+ .navmain {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  padding: 8px 12px;
+  justify-content: space-between;
+  background-color: #E2D5FC;
+  position: relative;
+}
+.navmain a {
+  text-decoration: none;
+  color: black;
+  font-family: 'Roboto Mono', 'monospace';
+  font-weight: 700;
+}
 
+.navicon {
+  margin: 0 auto;
+  position: absolute center;
+}
+.mostrar .navicon {
+  padding: 0;
+  margin: 0;
+  position: absolute left;
+}
+.naveg {
+  margin: 0 auto;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  opacity: 0;
+  visibility: hidden;
+  position: absolute;
+}
+.navegmenu {
+  color: black;
+  text-decoration: none;
+  font-family: 'Rubik', 'sans-serif';
+  font-size: 1.2em;
+}
+.mostrar .naveg {
+  margin: 0 auto;
+  vertical-align: middle;
+  padding: 1% 0;
+  visibility: visible;
+  opacity: 1;
+  position: relative;
+}
+.navtext {
+  margin: 50px;
+}
+  .navtext:hover {
+    color:white;
+  }
+    .navtext::after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      transform: scaleX(0);
+      height: 2px;
+      bottom: 0;
+      left: 0;
+      background-color: white;
+      transform-origin: bottom right;
+      transition: transform 0.25s ease-out;
+    }
+      .navtext:hover::after {
+        transform: scaleX(1);
+        transform-origin: bottom left;
+      }
+#btn-menu {
+  background-color: white;
+}
+
+/*HEADER*/
 .header {
     position: relative;
     width: 100%;
@@ -117,7 +185,6 @@ body {
       height: 100px;
       border-radius: 50%;
       display: flex;
-
       /*ANIMATION*/
         animation: rotation 10s infinite linear;
       }
@@ -138,23 +205,14 @@ body {
       border-radius: 50%;
     }
 
-/* MEDIQUERIES */
-
-@media all and (min-width: 800px) {
-    .center-content {
-      padding-left: calc((100% - 800px) / 2);
-      padding-right: calc((100% - 800px) / 2);
-    }
-  }
-
-  /* FOR ALL SECTIONS */
+/* FOR ALL SECTIONS */
 .center-content {
-    width: 100%;
-    padding: 20px;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;  
+  width: 100%;
+  padding: 20px;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;  
 }
 
 .bigTitle {
@@ -165,7 +223,7 @@ body {
   font-weight: 800;
   text-transform: uppercase;
 }
-  /* ABOUT ME */
+/* ABOUT ME */
  
   /*Portrait photo*/
   .portrait-container {
@@ -194,56 +252,54 @@ body {
   gap: 20px;
   align-content: space-between;
 }
-.btn {
-  cursor: pointer;
-  display: inline-block;
-  padding: 8px 10px;
-  line-height: 15px;
-  text-align: center;
-  text-decoration: none;
-  
-  background-color: #E2D5FC;
-  color: black;
-  border: 2px solid #413C4A;
-  /* border-radius: 10px; */
-  border-radius: 0.25rem;
-  box-shadow: 2px 2px 0px black;
-  transition: all .14s ease-out;
-  
-  font-weight: 600;
-  font-size: 18px;
-}
-
-  .btn:hover {
-  color: #B4A1DB;
-  background-color: white;
-  border: 2px solid #B4A1DB;
-  transform: translate(-4px, -4px);
-  box-shadow: 6px 8px 0px black;
-  border-collapse: collapse;
-  }
-
-  /* .btn:active {
-    transform: translate(2px, 2px);
-  } /*
-
-/*Secondary button*/
-.btn--secondary{
-  background-color: #E9E5EA;
-}
-
-  .btn--secondary:hover {
-    color: #413C4A;
-    background-color: #fff;
+  .btn {
+    cursor: pointer;
+    display: inline-block;
+    padding: 8px 10px;
+    line-height: 15px;
+    text-align: center;
+    text-decoration: none;
+    
+    background-color: #E2D5FC;
+    color: black;
     border: 2px solid #413C4A;
+    /* border-radius: 10px; */
+    border-radius: 0.25rem;
+    box-shadow: 2px 2px 0px black;
+    transition: all .14s ease-out;
+    
+    font-weight: 600;
+    font-size: 18px;
+  }
+    .btn:hover {
+    color: #B4A1DB;
+    background-color: white;
+    border: 2px solid #B4A1DB;
+    transform: translate(-4px, -4px);
+    box-shadow: 6px 8px 0px black;
+    border-collapse: collapse;
+    }
+    /* .btn:active {
+      transform: translate(2px, 2px);
+    } /*
+
+  /*Secondary button*/
+  .btn--secondary{
+    background-color: #E9E5EA;
   }
 
-  /* .btn--secondary:active {
-    transform: translate(0px);
-  }
+    .btn--secondary:hover {
+      color: #413C4A;
+      background-color: #fff;
+      border: 2px solid #413C4A;
+    }
+    /* .btn--secondary:active {
+      transform: translate(0px);
+    }
+
 /* SKILLS */
   /*Style*/
-.moreStuff {
+.moreStuff { /*Mejorar nombre clases*/
   margin-bottom: 30px;;
 }  
 .skills-section {
@@ -271,17 +327,18 @@ body {
       color: white;
   }
 
-/*Summary arrow*/
+/*Summary arrow - Icono que se ve diferente en algunas versiones android ¡¡CAMBIAR a SVG!!*/
     summary::after {
       margin-left: 1ch;
       display: inline-block;
       transition: 0.2s;
-      content: "▶"
+      content: "▶";
     }
 
     details[open] summary::after {
       transform: rotate(90deg);
     }
+    
 
 /*CONTACT*/
 .contact-section p {
@@ -289,6 +346,7 @@ body {
     align-items: center;
     align-content: center;
 }
+
 form {
     max-width:420px;
     margin: 40px 0px 0px 0px
@@ -320,13 +378,20 @@ textarea {
         line-height: 150%;
         resize: vertical;
       }
-      
+      textarea:focus::-webkit-input-placeholder 
+      {
+          color: transparent;
+      }     
 
 [type="text"]:focus,
-[type="email"]:focus
 [type="email"]:focus {
     border-color: #B4A1DB;
     outline: none;
+}
+
+input:focus::-webkit-input-placeholder 
+{
+    color: transparent;
 }
 
 [type="submit"] {
@@ -365,12 +430,15 @@ textarea {
 
 /* MEDIA QUIERIES */
 
-@media all and (max-width: 500px) {
+@media all and (max-width: 600px) { /* max-width -> porque no hiciste mobile first */
 
   .button-container {
     display: flex;
     flex-direction: column;
     gap: 10px;
+  }
+  #main-nav {
+    display: none;
   }
 
 }
@@ -383,6 +451,11 @@ textarea {
 }
 
 @media all and (min-width: 800px) {
+
+  .center-content {
+    padding-left: calc((100% - 800px) / 2);
+    padding-right: calc((100% - 800px) / 2);
+  }
 
   .header h1 {
     text-align: center;
